# Active_Speaker_Detection

./: .gitignore  README.md  config.example.json  doa_furhat.py  pyproject.toml  requirements.txt  run_2speaker_test.cmd  run_2speaker_test.py  run_furhat_asd.cmd  run_vad_test.cmd  srp_phat.py
audio_doa/: README.md  button_gt_bridge.py  calibrate_mic_channels.py  doa_core.py  doa_furhat.py  fusion.py  fusion_stub.py  requirements.txt  respeaker_tuning.py  run_live_fusion.py  srp_phat.py
data/models/cnn_vvad/: best.pt  config.json  threshold.json
data/windows/: windows_info.json
docs/: PIPELINE_WALKTHROUGH.md
hardware/nodemcu_buttons/: README.md  nodemcu_buttons.ino
scripts/: step1_check_alignment.py  step2_crop_face.py  step3_batch_extract_landmarks.py  step3_extract_landmarks.py  step4_build_windows.py  step5_train_cnn.py  step6_realtime_infer.py
src/furhat_asd/: __main__.py  config.py  controller.py  model.py
src/furhat_asd/audio/: __init__.py  audio_stream.py  doa_srp_phat.py  vad_gate.py  vad_models.py
src/furhat_asd/fusion/: __init__.py  user_selector.py
src/furhat_asd/net/: __init__.py  udp_json.py
src/furhat_asd/output/: __init__.py  segment_logger.py
src/furhat_asd/realtime/: client.py
src/furhat_asd/sidecar/: __init__.py  audio_sidecar.py
src/furhat_asd/tools/: __init__.py  audio_levels.py  doa_calibrate.py  doa_test.py  users_monitor.py  vad_test.py
src/furhat_asd/utils/: __init__.py  angles.py
src/furhat_asd/vision/: __init__.py  addressing.py
